# ctx-capture

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  server.json
.github/workflows/: ci.yml  release.yml
docs/: AUDIT_REPORT.md  DESIGN.md  RESULTS.md  registry-submission.md
docs/proof/: dogfood_deep_research_transcript.txt  manual_verification_transcript.txt
examples/: anthropic_agent.py  deep_research_agent.py
schema/: v1.0.json
scripts/: bench_overhead.py  dogfood.py  export_schema.py  manual_verify.py
src/ctx_capture/: __init__.py  schema.py
src/ctx_capture/capture/: __init__.py  recorder.py
src/ctx_capture/mcp/: __init__.py  __main__.py  anomalies.py  auth.py  models.py  pagination.py  server.py
src/ctx_capture/storage/: __init__.py  repository.py  sqlite_repo.py
tests/: test_capture.py  test_fidelity.py  test_fidelity_anthropic.py  test_schema.py  test_storage.py
tests/fixtures/: fake_anthropic_client.py  fake_client.py  toy_agent.py
tests/mcp/: conftest.py  helpers.py  test_auth_http.py  test_error_shapes.py  test_large_trace_pagination.py  test_pagination.py  test_size_limits.py  test_tool_contract.py
